version/0.2/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

========
Examples
========
End-to-end examples show how you can use PyAnsys Units. If the ``ansys-units``
package is installed on your machine, you can download these
examples as Python files or Jupyter notebooks and run them locally.

.. toctree::
   :maxdepth: 1
   :hidden:

.. 00-ansunits/README.txt


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

PyAnsys Units Examples
======================
PyAnsys Units provides many features, including creating quantities, accessing
different quantity properties, performing arithmetic operations, performing unit
conversions, creating unit systems, and applying unit systems to quantities.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to perform these tasks:">

.. only:: html

  .. image:: /examples/00-pyunits/images/thumb/sphx_glr_basic_usage_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-pyunits_basic_usage.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PyAnsys Units basics</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-pyunits/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
